Fixed nav bar on mobile devices (2)

--- a/styles/global.css
+++ b/styles/global.css
@@ -102,5 +102,6 @@ footer a:hover img {
   nav button {
     padding: 0.5rem 0.5rem;
     font-size: 0.9rem;
+    gap: 1rem;
   }
 }
