--- a/styles/index.css
+++ b/styles/index.css
@@ -143,5 +143,6 @@ footer a:hover img {
   nav button {
     padding: 0.5rem 0.5rem;
     font-size: 0.9rem;
+    gap: 1rem;
   }
 }
